// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`epics/venues | error case: no network should get recommended places by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: Error 404],
    "type": "GET_VENUES_EXPLORE_FAILURE",
  },
]
`;

exports[`epics/venues | error case: no network should get trending venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: Error 404],
    "type": "GET_VENUES_TRENDING_FAILURE",
  },
]
`;

exports[`epics/venues | error case: no network should get venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: Error 404],
    "type": "GET_VENUES_SEARCH_FAILURE",
  },
]
`;

exports[`epics/venues | error case: no network should get venues likes 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: Error 404],
    "type": "GET_VENUES_LIKES_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should get recommended places by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_EXPLORE_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should get trending venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_TRENDING_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should get venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_SEARCH_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should get venues likes 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_LIKES_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should suggest completion for venues by location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_SUGGEST_COMPLETION_FAILURE",
  },
]
`;

exports[`epics/venues | error case: not valid response should suggest completion for venues near to a location 1`] = `
Array [
  Object {
    "meta": undefined,
    "payload": [Error: response.json is not a function],
    "type": "GET_VENUES_SUGGEST_COMPLETION_FAILURE",
  },
]
`;

exports[`epics/venues should get recommended places by location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "reasons": Object {
          "count": 0,
          "items": Array [
            Object {
              "reasonName": "globalInteractionReason",
              "summary": "This spot is popular",
              "type": "general",
            },
          ],
        },
        "venue": Object {
          "categories": Array [
            Object {
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1f5941735",
              "name": "Gourmet Shop",
              "pluralName": "Gourmet Shops",
              "primary": true,
              "shortName": "Gourmet",
            },
          ],
          "id": "49b6e8d2f964a52016531fe3",
          "location": Object {
            "address": "179 E Houston St",
            "cc": "US",
            "city": "New York",
            "country": "United States",
            "crossStreet": "btwn Allen & Orchard St",
            "distance": 130,
            "formattedAddress": Array [
              "179 E Houston St (btwn Allen & Orchard St)",
              "New York, NY 10002",
              "United States",
            ],
            "labeledLatLngs": Array [
              Object {
                "label": "display",
                "lat": 40.72286707707289,
                "lng": -73.98829148466851,
              },
            ],
            "lat": 40.72286707707289,
            "lng": -73.98829148466851,
            "postalCode": "10002",
            "state": "NY",
          },
          "name": "Russ & Daughters",
          "venuePage": Object {
            "id": "77298563",
          },
        },
      },
    ],
    "type": "GET_VENUES_EXPLORE_SUCCESS",
  },
]
`;

exports[`epics/venues should get recommended places by location with custom parameter 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "reasons": Object {
          "count": 0,
          "items": Array [
            Object {
              "reasonName": "globalInteractionReason",
              "summary": "This spot is popular",
              "type": "general",
            },
          ],
        },
        "venue": Object {
          "categories": Array [
            Object {
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1f5941735",
              "name": "Gourmet Shop",
              "pluralName": "Gourmet Shops",
              "primary": true,
              "shortName": "Gourmet",
            },
          ],
          "id": "49b6e8d2f964a52016531fe3",
          "location": Object {
            "address": "179 E Houston St",
            "cc": "US",
            "city": "New York",
            "country": "United States",
            "crossStreet": "btwn Allen & Orchard St",
            "distance": 130,
            "formattedAddress": Array [
              "179 E Houston St (btwn Allen & Orchard St)",
              "New York, NY 10002",
              "United States",
            ],
            "labeledLatLngs": Array [
              Object {
                "label": "display",
                "lat": 40.72286707707289,
                "lng": -73.98829148466851,
              },
            ],
            "lat": 40.72286707707289,
            "lng": -73.98829148466851,
            "postalCode": "10002",
            "state": "NY",
          },
          "name": "Russ & Daughters",
          "venuePage": Object {
            "id": "77298563",
          },
        },
      },
    ],
    "type": "GET_VENUES_EXPLORE_SUCCESS",
  },
]
`;

exports[`epics/venues should get recommended places near to a location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "reasons": Object {
          "count": 0,
          "items": Array [
            Object {
              "reasonName": "globalInteractionReason",
              "summary": "This spot is popular",
              "type": "general",
            },
          ],
        },
        "venue": Object {
          "categories": Array [
            Object {
              "icon": Object {
                "prefix": "https://ss3.4sqi.net/img/categories_v2/shops/food_gourmet_",
                "suffix": ".png",
              },
              "id": "4bf58dd8d48988d1f5941735",
              "name": "Gourmet Shop",
              "pluralName": "Gourmet Shops",
              "primary": true,
              "shortName": "Gourmet",
            },
          ],
          "id": "49b6e8d2f964a52016531fe3",
          "location": Object {
            "address": "179 E Houston St",
            "cc": "US",
            "city": "New York",
            "country": "United States",
            "crossStreet": "btwn Allen & Orchard St",
            "distance": 130,
            "formattedAddress": Array [
              "179 E Houston St (btwn Allen & Orchard St)",
              "New York, NY 10002",
              "United States",
            ],
            "labeledLatLngs": Array [
              Object {
                "label": "display",
                "lat": 40.72286707707289,
                "lng": -73.98829148466851,
              },
            ],
            "lat": 40.72286707707289,
            "lng": -73.98829148466851,
            "postalCode": "10002",
            "state": "NY",
          },
          "name": "Russ & Daughters",
          "venuePage": Object {
            "id": "77298563",
          },
        },
      },
    ],
    "type": "GET_VENUES_EXPLORE_SUCCESS",
  },
]
`;

exports[`epics/venues should get trending venues by location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_TRENDING_SUCCESS",
  },
]
`;

exports[`epics/venues should get trending venues near to a location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_TRENDING_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues by location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues by location with intent match parameter 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues by query 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues likes 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Object {
      "count": 24,
      "items": Array [
        Object {
          "firstName": "Joe",
          "gender": "male",
          "id": "66019143",
          "lastName": "Benz",
          "photo": Object {
            "prefix": "https://fastly.4sqi.net/img/user/",
            "suffix": "/66019143_U7cpUhMp_MBPhsA_er-CfMmMiFXj2KsurXDZxMKR9KSiqf8vDKNtm8CuETX01F_RUzfyzjpa6.jpg",
          },
        },
        Object {
          "firstName": "Tyler",
          "gender": "male",
          "id": "275151",
          "lastName": "Elliott",
          "photo": Object {
            "prefix": "https://fastly.4sqi.net/img/user/",
            "suffix": "/275151-4G0WJJPRVXOCJBAS.jpg",
          },
        },
        Object {
          "firstName": "Miraculous",
          "gender": "none",
          "id": "29109434",
          "lastName": "Assembly",
          "photo": Object {
            "prefix": "https://fastly.4sqi.net/img/user/",
            "suffix": "/29109434_EKGvTLjo_d3wFukA0xdHXaFwxCMmxzb3BoI_6W1JQVeXLs3rgbsD3tGOPhAZoY8-wnUghn_LP",
          },
        },
      ],
      "summary": "24 Likes",
    },
    "type": "GET_VENUES_LIKES_SUCCESS",
  },
]
`;

exports[`epics/venues should get venues near to a location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/steakhouse_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1cc941735",
            "name": "Steakhouse",
            "pluralName": "Steakhouses",
            "primary": true,
            "shortName": "Steakhouse",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a5209beb1ee3",
        "location": Object {
          "address": "178 Broadway",
          "cc": "US",
          "city": "Brooklyn",
          "country": "United States",
          "crossStreet": "at Driggs Ave",
          "distance": 10,
          "formattedAddress": Array [
            "178 Broadway (at Driggs Ave)",
            "Brooklyn, NY 11211",
            "United States",
          ],
          "labeledLatLngs": Array [
            Object {
              "label": "display",
              "lat": 40.70995790682886,
              "lng": -73.96229110893742,
            },
          ],
          "lat": 40.70995790682886,
          "lng": -73.96229110893742,
          "postalCode": "11211",
          "state": "NY",
        },
        "name": "Peter Luger Steak House",
        "referralId": "v-1565543515",
        "venuePage": Object {
          "id": "77462637",
        },
      },
    ],
    "type": "GET_VENUES_SEARCH_SUCCESS",
  },
]
`;

exports[`epics/venues should suggest completion for venues by location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "4f045eeb00399761c77301e3",
        "location": Object {
          "address": "27 Prince St",
          "city": "New York",
          "country": "US",
          "crossStreet": "btwn Mott & Elizabeth St",
          "distance": 343,
          "lat": 40.722905825704764,
          "lng": -73.99466690110555,
          "postalCode": "10012",
          "state": "NY",
        },
        "name": "Prince Street Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "45ebc982f964a52091431fe3",
        "location": Object {
          "address": "7 Carmine St",
          "city": "New York",
          "country": "US",
          "crossStreet": "at 6th Ave",
          "distance": 728,
          "lat": 40.730491197306435,
          "lng": -74.00188088169593,
          "postalCode": "10014",
          "state": "NY",
        },
        "name": "Joe's Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a52062e61ee3",
        "location": Object {
          "address": "32 Spring St",
          "city": "New York",
          "country": "US",
          "crossStreet": "at Mott St",
          "distance": 480,
          "lat": 40.72156708733683,
          "lng": -73.99559138323225,
          "postalCode": "10012",
          "state": "NY",
        },
        "name": "Lombardi's Coal Oven Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "51351c3fe4b0c58b63965114",
        "location": Object {
          "address": "150 E 14th St",
          "city": "New York",
          "country": "US",
          "crossStreet": "3rd Ave.",
          "distance": 1097,
          "lat": 40.733386570577345,
          "lng": -73.98731060842591,
          "postalCode": "10003",
          "state": "NY",
        },
        "name": "Joe's Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/winery_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d123941735",
            "name": "Wine Bar",
            "pluralName": "Wine Bars",
            "shortName": "Wine Bar",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/italian_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d110941735",
            "name": "Italian Restaurant",
            "pluralName": "Italian Restaurants",
            "shortName": "Italian",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06376d81259",
            "name": "Nightlife Spot",
            "pluralName": "Nightlife Spots",
            "shortName": "Nightlife",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/pub_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d116941735",
            "name": "Bar",
            "pluralName": "Bars",
            "shortName": "Bar",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a520c7f11ee3",
        "location": Object {
          "address": "1 5th Ave",
          "city": "New York",
          "country": "US",
          "crossStreet": "at E 8th St",
          "distance": 681,
          "lat": 40.731990997794966,
          "lng": -73.99622300550848,
          "postalCode": "10003",
          "state": "NY",
        },
        "name": "Otto Enoteca Pizzeria",
      },
    ],
    "type": "GET_VENUES_SUGGEST_COMPLETION_SUCCESS",
  },
]
`;

exports[`epics/venues should suggest completion for venues near to a location 1`] = `
Array [
  Object {
    "meta": 0,
    "payload": Array [
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "4f045eeb00399761c77301e3",
        "location": Object {
          "address": "27 Prince St",
          "city": "New York",
          "country": "US",
          "crossStreet": "btwn Mott & Elizabeth St",
          "distance": 343,
          "lat": 40.722905825704764,
          "lng": -73.99466690110555,
          "postalCode": "10012",
          "state": "NY",
        },
        "name": "Prince Street Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "45ebc982f964a52091431fe3",
        "location": Object {
          "address": "7 Carmine St",
          "city": "New York",
          "country": "US",
          "crossStreet": "at 6th Ave",
          "distance": 728,
          "lat": 40.730491197306435,
          "lng": -74.00188088169593,
          "postalCode": "10014",
          "state": "NY",
        },
        "name": "Joe's Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a52062e61ee3",
        "location": Object {
          "address": "32 Spring St",
          "city": "New York",
          "country": "US",
          "crossStreet": "at Mott St",
          "distance": 480,
          "lat": 40.72156708733683,
          "lng": -73.99559138323225,
          "postalCode": "10012",
          "state": "NY",
        },
        "name": "Lombardi's Coal Oven Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
        ],
        "hasPerk": false,
        "id": "51351c3fe4b0c58b63965114",
        "location": Object {
          "address": "150 E 14th St",
          "city": "New York",
          "country": "US",
          "crossStreet": "3rd Ave.",
          "distance": 1097,
          "lat": 40.733386570577345,
          "lng": -73.98731060842591,
          "postalCode": "10003",
          "state": "NY",
        },
        "name": "Joe's Pizza",
      },
      Object {
        "categories": Array [
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/pizza_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d1ca941735",
            "name": "Pizza Place",
            "pluralName": "Pizza Places",
            "shortName": "Pizza",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/winery_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d123941735",
            "name": "Wine Bar",
            "pluralName": "Wine Bars",
            "shortName": "Wine Bar",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/italian_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d110941735",
            "name": "Italian Restaurant",
            "pluralName": "Italian Restaurants",
            "shortName": "Italian",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/food/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06374d81259",
            "name": "Food",
            "pluralName": "Food",
            "shortName": "Food",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/default_",
              "suffix": ".png",
            },
            "id": "4d4b7105d754a06376d81259",
            "name": "Nightlife Spot",
            "pluralName": "Nightlife Spots",
            "shortName": "Nightlife",
          },
          Object {
            "icon": Object {
              "prefix": "https://ss3.4sqi.net/img/categories_v2/nightlife/pub_",
              "suffix": ".png",
            },
            "id": "4bf58dd8d48988d116941735",
            "name": "Bar",
            "pluralName": "Bars",
            "shortName": "Bar",
          },
        ],
        "hasPerk": false,
        "id": "3fd66200f964a520c7f11ee3",
        "location": Object {
          "address": "1 5th Ave",
          "city": "New York",
          "country": "US",
          "crossStreet": "at E 8th St",
          "distance": 681,
          "lat": 40.731990997794966,
          "lng": -73.99622300550848,
          "postalCode": "10003",
          "state": "NY",
        },
        "name": "Otto Enoteca Pizzeria",
      },
    ],
    "type": "GET_VENUES_SUGGEST_COMPLETION_SUCCESS",
  },
]
`;
